<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/button_config_mods">
	<CheckBoxPreference
        android:key="always_show_status_icons"
        android:title="@string/always_show_status_icons"
        android:dialogTitle="@string/always_show_status_icons"
        android:defaultValue="false" />

	<CheckBoxPreference
        android:key="disable_drag_to_unlock"
        android:title="@string/disable_drag_to_unlock"
        android:dialogTitle="@string/disable_drag_to_unlock"
        android:defaultValue="false" />

	<CheckBoxPreference
        android:key="restore_glowlight_on_wake"
        android:title="@string/restore_glowlight_on_wake"
        android:dialogTitle="@string/restore_glowlight_on_wake"
        android:defaultValue="false" />

	<CheckBoxPreference
        android:key="hide_screensaver_banner"
        android:title="@string/hide_screensaver_banner"
        android:dialogTitle="@string/hide_screensaver_banner"
        android:defaultValue="false" />
		
	<EditTextPreference
        android:key="custom_banner_text"
        android:title="@string/custom_banner_text"
        android:dialogTitle="@string/custom_banner_text"
        android:defaultValue="" />
		
</PreferenceScreen>